manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jain-university
  labels:
    name: jain-university
